ui-tests/tests/ui/tokio_without_net_missing_reactor.rs
use ui_tests::tokio::reactor;

fn main() {}
